--- a/src/things/poker-hands/index.html
+++ b/src/things/poker-hands/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="/css/style.css"/>
+		<link rel="stylesheet" href="./css/style.css"/>
 		
 	</head>
 	<body>
-		<img src="/img/Poker%20Chips%20and%20Hands%20Cheat%20Sheet-01.png">
+		<img src="./img/Poker%20Chips%20and%20Hands%20Cheat%20Sheet-01.png">
 	</body>
 </html>
