added projectsContent boxes
TODO: start branching

--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,19 @@
 				<br><br>For more info, email me at tab160.com@gmail.com</p>
 			</div>
 			<div class="blue-selector-home"></div>
+			<div class="projectsContent-home">
+				<div class="projectBox-home">
+					<p class="test-home">Names Box</p>
+				</div>
+				
+				<div class="projectBox-home">
+					<p class="test-home">Poker Hands Box</p>
+				</div>
+				
+			</div>
 		</div>
-		<!--<div class="projectsContent-home"></div>
-		-->
+		
+		
 		<script src="js/main.js"></script>
 	</body>
 </html>
